--- a/install
+++ b/install
@@ -14,7 +14,7 @@ make_scripts_executable() {
 }
 
 link_dotfiles() {
-  for dotfile in ".aliases" ".exports" ".secrets" ".wgetrc" ".ssh" ".js"; do
+  for dotfile in ".aliases" ".exports" ".secrets" ".wgetrc" ".ssh" ".js" ".vim" ".zshrc" ".profile"; do
     if [[ -L ~/"${dotfile}" && -d ~/"${dotfile}" ]]; then
       unlink ~/"${dotfile}"
     else
@@ -22,6 +22,15 @@ link_dotfiles() {
     fi
     ln -s ~/.dotfiles/"${dotfile}" ~/"${dotfile}"
   done
+}
+
+link_submodule_files() {
+  if [[ -L ~/.dotfiles/.vim/colors/molokai.vim ]]; then
+    unlink ~/.dotfiles/.vim/colors/molokai.vim
+  else
+    mv ~/.dotfiles/.vim/colors/molokai.vim ~/.dotfiles/bak/molokai.vim
+  fi
+  ln -s ~/.dotfiles/submodules/molokai/colors/molokai.vim ~/.dotfiles/.vim/colors/molokai.vim
 }
 
 install_general_terminal_tools() {
@@ -44,6 +53,7 @@ if [ "$($OS)" == 'Darwin' ]; then
     clone_dotfile_repository
     make_scripts_executable
     link_dotfiles
+    link_submodule_files
     install_general_terminal_tools
 
     # Execute mac install script
@@ -56,6 +66,8 @@ else
 
     clone_dotfile_repository
     make_scripts_executable
+    link_dotfiles
+    link_submodule_files
     install_general_terminal_tools
     install_rvm
 
